function checkbinaries fixed... issue with logical operators... fixed part of script that does a find on modified files... known issue with newermt as per comment

--- a/client.config.SAMPLE
+++ b/client.config.SAMPLE
@@ -1,6 +1,6 @@
 bucketName=""
 initialSyncFile="initialSync.config" #sync file to state last sync date
-dirs="DirsToBackup.config"
+dirsList="DirsToBackup.config"
 tempFolder="/tmp"
 logFile="backup-$(date +%F).log"
 uploadLog="upload-$(date +%F).log"
