--- a/client.config.SAMPLE
+++ b/client.config.SAMPLE
@@ -7,4 +7,6 @@ uploadLog="upload-$(date +%F).log"
 key1="id_rsa.pub.key"
 key2="id_rsa.key"
 fileModifiedAge="1 week ago" 
+apiKeyFile="apikey.config"
 DEBUG="1"
+
